Fix default vertical alignment for readonly attributes
The gx-edit, gx-checkbox, gx-radio-group and gx-select controls have to set their default vertical alignment to top when they have readonly = "true".

issue: 96448

--- a/src/components/renders/bootstrap/edit/edit-render.scss
+++ b/src/components/renders/bootstrap/edit/edit-render.scss
@@ -33,6 +33,7 @@ gx-edit {
   $trigger-button-width: clamp(32px, 2.5em, 64px);
 
   position: relative;
+  text-align: start;
   overflow: hidden;
   @include transition-properties();
 
@@ -152,7 +153,7 @@ gx-edit {
     }
 
     // Used when format = HTML
-    & > .html-container {
+    & > .gx-edit-readonly-container {
       display: flex;
       flex: 1;
       position: relative;
@@ -162,7 +163,6 @@ gx-edit {
       & > .gx-edit-content {
         position: relative;
         width: 100%;
-        text-align: start;
       }
     }
   }
@@ -174,9 +174,8 @@ gx-edit {
     position: relative;
     overflow: hidden;
 
-    & > .readonly-content-container {
+    & > .gx-edit-readonly-container {
       display: flex;
-      align-items: inherit;
       flex: 1;
       position: relative;
       height: 100%;
